# ebs-autoscale-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
scaffold/: cloudshell-setup.sh  single-use-aws-setup.sh
src/: aws.rs  config.rs  disk.rs  errors.rs  fs.rs  lib.rs  main.rs
