[package]
name = "ebs-autoscale-rust"
version = "0.1.0"
edition = "2021"
description = "AWS EBS autoscaler written in Rust"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ebs-autoscale-rust"

[dependencies]
aws-sdk-ec2 = "1.42.0"
env_logger = "0.11.3"
figment = { version = "0.10.19", features = ["env", "json", "toml"] }
log = "0.4.21"
serde = { version = "1.0.202", features = ["serde_derive"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }

[dev-dependencies]
cargo-deb = "2.2.0"
